changed to BeauSoup for parsing classification text

--- a/failed-wiki-experiments.ipynb
+++ b/failed-wiki-experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +35,13 @@
     "import sys\n",
     "\n",
     "import wikipedia\n",
+    "from bs4 import BeautifulSoup\n",
     "#https://stackoverflow.com/questions/8088226/content-of-infobox-of-wikipedia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +76,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Mammalia</td>\n",
-       "      <td>15040</td>\n",
+       "      <td>Primates</td>\n",
+       "      <td>15963</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -84,16 +85,16 @@
       ],
       "text/plain": [
        "       name     id\n",
-       "0  Mammalia  15040"
+       "0  Primates  15963"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pgd.search_name(\"Mammalia\")"
+    "pgd.search_name(\"Primates\")"
    ]
   },
   {
@@ -292,10 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def trynum(n):\n",
+    "    try:\n",
+    "        return float(n)\n",
+    "    except:\n",
+    "        return None"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,6 +310,261 @@
    "source": [
     "## querying experiments"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "this_query = 'Monotreme'\n",
+    "# create search url\n",
+    "wiki_url = \"https://en.wikipedia.org/wiki/{}\".format(this_query)\n",
+    "## setup\n",
+    "#headers  = {'User-Agent':'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7',} \n",
+    "#details  = {}\n",
+    "##search \n",
+    "#request  = urllib.request.Request(search_url, None, headers) \n",
+    "#response = urllib.request.urlopen(request)\n",
+    "res = requests.get(wiki_url).content.decode('utf-8')\n",
+    "soup = BeautifulSoup(res, \"lxml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#soup.find(\"table\", {\"class\":\"infobox biota\"})\n",
+    "\n",
+    "#table = soup.find(lambda tag: tag.name=='table' and tag.has_attr('class') and tag['class']==\"infobox biota\") \n",
+    "table = soup.find(\"table\", {\"class\":\"infobox biota\"})\n",
+    "rows = table.findAll(lambda tag: tag.name=='div')\n",
+    "#print(len(rows))\n",
+    "#for div in rows: \n",
+    "#    print(div.text)\n",
+    "#    break\n",
+    "date_text = ' '.join([div.text.replace('\\n', ' ') for div in rows])\n",
+    "date_text = re.sub(\"\\[[0-9]\\]\", \"\", date_text) # remove links\n",
+    "useful = re.sub(\"[^A-Za-z0-9]\", \" \", date_text) # remove other stuff\n",
+    "useful = useful.replace(\"Late \",\"Late_\").replace(\"Middle \",\"Middle_\").replace(\"Early \", \"Early_\").split(\" \")\n",
+    "#useful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(210.0, 0.0)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "times = [trynum(n) for n in useful]\n",
+    "times = [n for n in times if n is not None]\n",
+    "if len(times) >= 2:\n",
+    "    d = (np.round(max(times),3), np.round(min(times),3))\n",
+    "else:\n",
+    "    # parse from periods\n",
+    "    dates = []\n",
+    "    for u in useful:\n",
+    "        ru = u.replace(\"Late_\",\"\").replace(\"Middle_\",\"\").replace(\"Early_\", \"\")\n",
+    "        try:\n",
+    "            this_row = list(gt[gt['Period']==ru].iloc[0])\n",
+    "            if \"Late_\" in u:\n",
+    "                this_dates = [this_row[2]]\n",
+    "            elif \"Middle_\" in u:\n",
+    "                this_dates = [np.mean(this_row[1:3])]\n",
+    "            elif \"Early_\" in u:\n",
+    "                this_dates = [this_row[1]]\n",
+    "            else:\n",
+    "                this_dates = this_row[1:3]\n",
+    "            dates += this_dates\n",
+    "        except:\n",
+    "            pass\n",
+    "    d = (np.round(max(dates),3), np.round(min(dates),3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'  a short beaked echidna a platypus a steropodon reconstruction and a western long beaked echidna  kingdom  animalia  phylum  chordata  class  mammalia  infraclass  australosphenida  order  monotrematac l bonaparte   kryoryctes steropodontidae platypoda ornithorhynchidae tachyglossa tachyglossidae  monotreme'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# getting classification info\n",
+    "\n",
+    "#table = soup.find(\"table\", {\"class\":\"infobox biota\"})\n",
+    "rows = table.findAll(lambda tag: tag.name=='td')\n",
+    "print(len(rows))\n",
+    "cf_text = [re.sub(\"[^A-Za-z]+\", \" \", td.text).lower() for td in rows]\n",
+    "' '.join(cf_text + [this_query.lower()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n', <tbody><tr>\n",
+       " <th colspan=\"2\" style=\"text-align: center; background-color: rgb(235,235,210)\">Monotremes<sup class=\"reference\" id=\"cite_ref-msw3_1-0\"><a href=\"#cite_note-msw3-1\">[1]</a></sup><br/><div style=\"font-size: 85%;\">Temporal range: <a href=\"/wiki/Late_Triassic\" title=\"Late Triassic\">Late Triassic</a><sup class=\"reference\" id=\"cite_ref-2\"><a href=\"#cite_note-2\">[2]</a></sup>–<a href=\"/wiki/Holocene\" title=\"Holocene\">Holocene</a>, <span style=\"display:inline-block;\"></span><span style=\"display:inline-block;\">210–0 <a class=\"mw-redirect\" href=\"/wiki/Megaannum\" title=\"Megaannum\">Ma</a></span> <span style=\"display:inline-block;\"></span><div id=\"Timeline-row\" style=\"margin: 4px auto 0; clear:both; width:220px; padding:0px; height:18px; overflow:visible; border:1px #666; border-style:solid none; position:relative; z-index:0; font-size:13px;\">\n",
+       " <div style=\"position:absolute; height:100%; left:0px; width:208.07692307692px; padding-left:5px; text-align:left; background-color:rgb(254,214,123); background-image: -moz-linear-gradient(left, rgba(255,255,255,1), rgba(254,217,106,1) 15%, rgba(254,217,106,1)); background-image: -o-linear-gradient(left, rgba(255,255,255,1), rgba(254,217,106,1) 15%, rgba(254,217,106,1)); background-image: -webkit-linear-gradient(left, rgba(255,255,255,1), rgba(254,217,106,1) 15%, rgba(254,217,106,1)); background-image: linear-gradient(to right, rgba(255,255,255,1), rgba(254,217,106,1) 15%, rgba(254,217,106,1));\"><a href=\"/wiki/Precambrian\" title=\"Precambrian\">PreЄ</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(129,170,114); left:36.892307692308px; width:18.818461538462px;\"><a href=\"/wiki/Cambrian\" title=\"Cambrian\">Є</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(0,169,138); left:55.710769230769px; width:14.08px;\"><a href=\"/wiki/Ordovician\" title=\"Ordovician\">O</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(166,223,197); left:69.790769230769px; width:8.3261538461539px;\"><a href=\"/wiki/Silurian\" title=\"Silurian\">S</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(221,150,81); left:78.116923076923px; width:20.409230769231px;\"><a href=\"/wiki/Devonian\" title=\"Devonian\">D</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(63,174,173); left:98.526153846154px; width:20.307692307692px;\"><a href=\"/wiki/Carboniferous\" title=\"Carboniferous\">C</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(247,88,60); left:118.83384615385px; width:15.907015384615px;\"><a href=\"/wiki/Permian\" title=\"Permian\">P</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(153,78,150); left:134.74086153846px; width:17.126830769231px;\"><a href=\"/wiki/Triassic\" title=\"Triassic\">T</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(0,187,231); left:151.86769230769px; width:19.055384615385px;\"><a href=\"/wiki/Jurassic\" title=\"Jurassic\">J</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(111,200,107); left:170.92307692308px; width:26.738461538462px;\"><a href=\"/wiki/Cretaceous\" title=\"Cretaceous\">K</a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(254,161,99); left:197.66153846154px; width:14.543692307692px;\"><a href=\"/wiki/Paleogene\" title=\"Paleogene\"><small>Pg</small></a></div>\n",
+       " <div style=\"position:absolute; height:100%; text-align:center; background-color:rgb(254,221,45); left:212.20523076923px; width:6.9215384615385px;\"><a href=\"/wiki/Neogene\" title=\"Neogene\"><small>N</small></a></div>\n",
+       " <div id=\"end-border\" style=\"position:absolute; height:100%; background-color:#666; width:1px; left:219px\"></div><div style=\"margin:0 auto; line-height:0; clear:both; width:220px; padding:0px; height:8px; overflow:visible; background-color:transparent; position:relative; top:-4px; z-index:100;\"><div style=\"position:absolute; height:8px; left:148.92307692308px; width:71.076923076923px; background-color:#360; opacity:0.42;\"></div>\n",
+       " <div style=\"position:absolute; height:8px; left:148.92307692308px; width:71.076923076923px; background-color:#360; opacity:1;\"></div>\n",
+       " <div style=\"position:absolute; height:6px; top:1px; left:149.92307692308px; width:69.076923076923px; background-color:#6c3;\"></div>\n",
+       " </div>\n",
+       " </div></div>\n",
+       " </th></tr>\n",
+       " <tr>\n",
+       " <td colspan=\"2\" style=\"text-align: center\"><a class=\"image\" href=\"/wiki/File:Prototheria_collage.png\"><img alt=\"Prototheria collage.png\" data-file-height=\"600\" data-file-width=\"600\" height=\"220\" src=\"//upload.wikimedia.org/wikipedia/commons/thumb/4/42/Prototheria_collage.png/220px-Prototheria_collage.png\" srcset=\"//upload.wikimedia.org/wikipedia/commons/thumb/4/42/Prototheria_collage.png/330px-Prototheria_collage.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/4/42/Prototheria_collage.png/440px-Prototheria_collage.png 2x\" width=\"220\"/></a>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <td colspan=\"2\" style=\"text-align: center; font-size: 88%\">A <a href=\"/wiki/Short-beaked_echidna\" title=\"Short-beaked echidna\">short-beaked echidna</a>, a <a href=\"/wiki/Platypus\" title=\"Platypus\">platypus</a>, a <i><a href=\"/wiki/Steropodon\" title=\"Steropodon\">Steropodon</a></i> reconstruction and a <a href=\"/wiki/Western_long-beaked_echidna\" title=\"Western long-beaked echidna\">western long-beaked echidna</a>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <th colspan=\"2\" style=\"min-width:15em; text-align: center; background-color: rgb(235,235,210)\"><a href=\"/wiki/Taxonomy_(biology)\" title=\"Taxonomy (biology)\">Scientific classification</a> <span class=\"plainlinks\" style=\"font-size:smaller; float:right; padding-right:0.4em; margin-left:-3em;\"><a href=\"/wiki/Template:Taxonomy/Monotremata\" title=\"e\"><img alt=\"e\" data-file-height=\"16\" data-file-width=\"16\" height=\"16\" src=\"//upload.wikimedia.org/wikipedia/commons/7/74/Red_Pencil_Icon.png\" width=\"16\"/></a></span>\n",
+       " </th></tr>\n",
+       " <tr>\n",
+       " <td>Kingdom:</td>\n",
+       " <td><a href=\"/wiki/Animal\" title=\"Animal\">Animalia</a>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <td>Phylum:</td>\n",
+       " <td><a href=\"/wiki/Chordate\" title=\"Chordate\">Chordata</a>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <td>Class:</td>\n",
+       " <td><a href=\"/wiki/Mammal\" title=\"Mammal\">Mammalia</a>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <td>Infraclass:</td>\n",
+       " <td><a href=\"/wiki/Australosphenida\" title=\"Australosphenida\">Australosphenida</a>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <td>Order:</td>\n",
+       " <td><b>Monotremata</b><br/><small><a href=\"/wiki/Charles_Lucien_Bonaparte\" title=\"Charles Lucien Bonaparte\">C.L. Bonaparte</a>, 1837<sup class=\"reference\" id=\"cite_ref-3\"><a href=\"#cite_note-3\">[3]</a></sup></small>\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <th colspan=\"2\" style=\"text-align: center; background-color: rgb(235,235,210)\">Subgroups\n",
+       " </th></tr>\n",
+       " <tr>\n",
+       " <td colspan=\"2\" style=\"text-align: left\">\n",
+       " <ul><li><i>†<a href=\"/wiki/Kryoryctes\" title=\"Kryoryctes\">Kryoryctes</a></i>?</li>\n",
+       " <li>†<a href=\"/wiki/Steropodontidae\" title=\"Steropodontidae\">Steropodontidae</a></li>\n",
+       " <li><a class=\"mw-redirect\" href=\"/wiki/Platypoda\" title=\"Platypoda\">Platypoda</a>\n",
+       " <ul><li><a href=\"/wiki/Ornithorhynchidae\" title=\"Ornithorhynchidae\">Ornithorhynchidae</a></li></ul></li>\n",
+       " <li><a class=\"mw-redirect\" href=\"/wiki/Tachyglossa\" title=\"Tachyglossa\">Tachyglossa</a>\n",
+       " <ul><li><a href=\"/wiki/Echidna\" title=\"Echidna\">Tachyglossidae</a></li></ul></li></ul>\n",
+       " </td></tr>\n",
+       " </tbody>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#song_genres = [re.sub(re.compile('[0-9\\(\\)]'), '', m.text).strip().lower() for m in soup.find(\"div\", {\"class\":\"song_genres\"}).find(\"div\", {\"class\":\"middle\"}).findAll('a')]\n",
+    "box = [m for m in soup.find(\"table\", {\"class\":\"infobox biota\"})]\n",
+    "box\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
