hover image at bottom!

--- a/make_lines_data.ipynb
+++ b/make_lines_data.ipynb
@@ -2,28 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data/Mammalia-15040-df-images-base64.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "DATA_IN = 'data/Mammalia-15040-df-images-base64.csv'\n",
-    "NODE_OUT= 'data/Mammalia-15040-df-nodes.csv'\n",
-    "LINE_OUT= 'data/Mammalia-15040-df-lines.csv'"
+    "BASE_PICK = \"Mammalia-15040\"\n",
+    "#BASE_PICK = \"Chordata-2499\"\n",
+    "\n",
+    "DATA_IN = 'data/{}-df-images-base64.csv'.format(BASE_PICK)\n",
+    "NODE_OUT= 'data/{}-df-nodes.csv'.format(BASE_PICK)\n",
+    "LINE_OUT= 'data/{}-df-lines.csv'.format(BASE_PICK)\n",
+    "print(\"loading \"+DATA_IN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +76,24 @@
     "    elif t < 0:\n",
     "        return 0\n",
     "    else:\n",
-    "        return t"
+    "        return t\n",
+    "\n",
+    "def bytes_to_str(x):\n",
+    "    try:\n",
+    "        return 'data:image/jpeg;base64,'+ast.literal_eval(x).decode('utf-8')\n",
+    "    except SyntaxError:\n",
+    "        return x\n",
+    "\n",
+    "def add_blank_row(row, cols):\n",
+    "    new_blank_row = row[cols]\n",
+    "    for c in cols:\n",
+    "        new_blank_row[c] = None\n",
+    "    return new_blank_row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "node_df = pd.DataFrame(node_list)\n",
     "node_df['z'] = node_df['z'].apply(time_log)\n",
+    "node_df['img_base64'] = node_df['img_base64'].apply(bytes_to_str)\n",
     "node_df.to_csv(NODE_OUT, index=False)"
    ]
   },
@@ -104,7 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -127,27 +160,28 @@
     "line_list = []\n",
     "\n",
     "for i, row in df.iterrows():\n",
-    "\n",
+    "    # vertical line\n",
     "    new_row_1 = row.rename({TOP:'z'})[line_cols].to_dict()\n",
     "    line_list.append(new_row_1)\n",
     "    new_row_2 = row.rename({BTM:'z'})[line_cols].to_dict()\n",
     "    line_list.append(new_row_2)\n",
-    "    new_blank_row = row[line_cols]\n",
-    "    for c in line_cols:\n",
-    "        new_blank_row[c] = None\n",
-    "    line_list.append(new_blank_row)"
+    "    line_list.append(add_blank_row(row, line_cols))\n",
+    "    # horizontal line\n",
+    "    parent_row = df.loc[df.id == new_row_1['ancestor']].squeeze()\n",
+    "    if len(parent_row) == 0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        line_list.append(new_row_1)\n",
+    "        new_row_3 = new_row_1.copy()\n",
+    "        new_row_3['x'] = parent_row['x']\n",
+    "        new_row_3['y'] = parent_row['y']\n",
+    "        line_list.append(new_row_3)\n",
+    "        line_list.append(add_blank_row(row, line_cols))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
