--- a/make_lines_data.ipynb
+++ b/make_lines_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data/Mammalia-15040-df-images-base64.csv\n"
+      "loading data/Mammalia-15040-df-images-base64-filly.csv\n"
      ]
     }
    ],
@@ -28,7 +28,8 @@
     "BASE_PICK = \"Mammalia-15040\"\n",
     "#BASE_PICK = \"Chordata-2499\"\n",
     "\n",
-    "DATA_IN = 'data/{}-df-images-base64.csv'.format(BASE_PICK)\n",
+    "#DATA_IN = 'data/{}-df-images-base64.csv'.format(BASE_PICK)\n",
+    "DATA_IN = 'data/{}-df-images-base64-filly.csv'.format(BASE_PICK)\n",
     "NODE_OUT= 'data/{}-df-nodes.csv'.format(BASE_PICK)\n",
     "LINE_OUT= 'data/{}-df-lines.csv'.format(BASE_PICK)\n",
     "print(\"loading \"+DATA_IN)"
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,17 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "TOP = 'Begin'\n",
-    "BTM = 'End'"
+    "BTM = 'End'\n",
+    "FILLY_COL = 'img_base64_filly'\n",
+    "ORIG_COL = 'img_base64'\n",
+    "IMG_COL = 'img'\n",
+    "Z_COL = 'z'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,32 +98,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get nodes\n",
-    "node_cols = [c for c in orig_cols if (c != TOP) and (c != BTM)]+['z']\n",
+    "df[FILLY_COL] = df[FILLY_COL].fillna(df[ORIG_COL])\n",
+    "node_cols = [c for c in orig_cols if c not in [TOP, BTM, ORIG_COL, FILLY_COL]]+[IMG_COL, Z_COL]\n",
     "node_list = []\n",
     "\n",
     "for i, row in df.iterrows():\n",
-    "\n",
-    "    new_row_1 = row.rename({TOP:'z'})[node_cols].to_dict()\n",
+    "    new_row_1 = row.rename({TOP:Z_COL, FILLY_COL:IMG_COL})[node_cols].to_dict()\n",
     "    node_list.append(new_row_1)\n",
-    "    new_row_2 = row.rename({BTM:'z'})[node_cols].to_dict()\n",
+    "    new_row_2 = row.rename({BTM:Z_COL, FILLY_COL:IMG_COL})[node_cols].to_dict()\n",
     "    node_list.append(new_row_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "node_df = pd.DataFrame(node_list)\n",
-    "node_df['z'] = node_df['z'].apply(time_log)\n",
-    "node_df['img_base64'] = node_df['img_base64'].apply(bytes_to_str)\n",
-    "node_df.to_csv(NODE_OUT, index=False)"
+    "node_df[Z_COL] = node_df[Z_COL].apply(time_log)\n",
+    "node_df[IMG_COL] = node_df[IMG_COL].apply(bytes_to_str)\n",
+    "#\n",
+    "node_df[IMG_COL] = node_df['name'].map(str) + \"XSXSXSX\" + node_df[IMG_COL]\n",
+    "#\n",
+    "node_df.to_csv(NODE_OUT, index=False)\n",
+    "#node_df.head()"
    ]
   },
   {
@@ -130,14 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +208,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
